fixed chat bubble overlap

--- a/css/main.css
+++ b/css/main.css
@@ -10408,6 +10408,12 @@ input[name=consent] {
   }
 }
 
+@media (min-width: 767px) {
+  #hubspot-messages-iframe-container {
+    z-index: 999 !important;
+  }
+}
+
 .section-large {
   padding-top: 145px;
   padding-bottom: 145px;
