--- a/scss/generic/_helpers.scss
+++ b/scss/generic/_helpers.scss
@@ -1335,3 +1335,10 @@ input[name=consent] {
   }
 }
 
+#hubspot-messages-iframe-container {
+
+  @media (min-width:767px) {
+		z-index: 999 !important;
+	}
+}
+
